ja/11.3/admin/webconfig-guide.rst
====================
ウェブクロールの設定
====================

概要
====

ウェブクロール設定ページではウェブクロールの設定を行います。

管理方法
========

表示方法
--------

下図のウェブクロールの設定一覧ページを開くには、左メニューの[クローラー>ウェブ] をクリックします。

|image0|

編集するには設定名をクリックします。

設定の作成
----------

ウェブクロールの設定ページを開くには作成ボタンをクリックします。

|image1|

設定項目
--------

名前
::::

設定名。

URL
:::

クロールの始点となるURL。

クロール対象とするURL
:::::::::::::::::::::

この正規表現は |Fess| クローラーの URL パターンに許可されるものを示します。

クロール対象から除外するURL
:::::::::::::::::::::::::::

この正規表現は |Fess| クローラーの URL パターンに拒否されるものを示します。

検索対象とするURL
:::::::::::::::::

この正規表現は |Fess| インデクサーの URL パターンに許可されるものを示します。

検索対象から除外するURL
:::::::::::::::::::::::

この正規表現は |Fess| インデクサーの URL パターンに拒否されるものを示します。

設定パラメータ
::::::::::::::

クロール設定情報を指定することができます。

深さ
::::

クロールしたドキュメント内に含まれるリンクをたどる際の深さを指定できます。

最大アクセス数
::::::::::::::

インデックスされるurlの数。

ユーザーエージェント
::::::::::::::::::::

|Fess| クローラーの名前。

スレッド数
::::::::::

この設定におけるクロールするスレッド数。

間隔
::::

URLをクロールする際のそれぞれのスレッドにおける時間間隔。

ブースト値
::::::::::

この設定におけるインデックスされたドキュメントの重み。

パーミッション
::::::

この設定のパーミッションを指定します。
パーミッションの指定方法は、たとえば、developerグループに属するユーザーに検索結果を表示させるためには{group}developerと指定します。
ユーザー単位の指定は{user}ユーザー名、ロール単位の指定は{role}ロール名、グループ単位の指定は{group}グループ名で指定します。

仮想ホスト
::::::::::::::::::::

仮想ホストのホスト名を指定します。
詳しくは :doc:`../config/virtual-host` を参照してください。

ラベル
::::::

この設定のラベルを指定します。

状態
::::

もし有効であるなら、デフォルトクローラーのスケジュールジョブはこの設定を含みます。

設定の削除
----------

一覧ページの設定名をクリックし、削除ボタンをクリックすると確認画面が表示されます。削除ボタンを押すと設定が削除されます。

例
==

fess.codelibs.org をクロールする
---------------------------

http://fess.codelibs.org/ 以下のページをクロールするウェブクロール設定を作る場合、下のような設定値にします。

+----------------------------+-----------------------------+
| 設定項目                   | 設定値                      |
+============================+=============================+
| 名前                       | Fess                        |
+----------------------------+-----------------------------+
| URL                        | http://fess.codelibs.org/   |
+----------------------------+-----------------------------+
| クロール対象とするURL      | http://fess.codelibs.org/.* |
+----------------------------+-----------------------------+

他の設定値はデフォルト値を使用します。

.. |image0| image:: ../../../resources/images/ja/11.3/admin/webconfig-1.png
.. |image1| image:: ../../../resources/images/ja/11.3/admin/webconfig-2.png
